# nn-rs

./: Cargo.toml  README.md
dataset/mnist_train/: file1.csv  file10.csv  file11.csv  file12.csv  file13.csv  file14.csv  file15.csv  file16.csv  file17.csv  file18.csv  file19.csv  file2.csv  file20.csv  file21.csv  file22.csv  file23.csv  file24.csv  file25.csv  file26.csv  file27.csv  file28.csv  file29.csv  file3.csv  file30.csv  file31.csv  file32.csv  file33.csv  file34.csv  file35.csv  file36.csv  file37.csv  file38.csv  file39.csv  file4.csv  file40.csv  file41.csv  file42.csv  file43.csv  file44.csv  file45.csv  (+20 more)
nn-bins/: Cargo.toml
nn-bins/src/: handwritten_recognition.rs  nn_data_scaler.rs  nn_image.rs  nn_mnist_train_part_one.rs  nn_mnist_train_part_two.rs  nn_mnist_train_part_zero.rs
nn/src/: lib.rs
src/: main.rs
